Add guests list, qr and email

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,7 @@
             <div class="list-group list-group-flush">
                 <a href="/" class="list-group-item list-group-item-action bg-light">Главная</a>
                 <a href="/upload" class="list-group-item list-group-item-action bg-light">Загрузка пользователей</a>
+                <a href="/guests" class="list-group-item list-group-item-action bg-light">Список гостей</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
