--- a/templates/uploads/index.html.twig
+++ b/templates/uploads/index.html.twig
@@ -17,5 +17,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/upload.js') }}">
+    <script src="{{ asset('js/upload.js') }}"></script>
 {% endblock %}
